// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="wrapper"
/>
`;

exports[`renders correctly with children 1`] = `
<div
  className="wrapper"
>
  <p>
    Some children
  </p>
</div>
`;
